trying to avoid overflow

--- a/style.css
+++ b/style.css
@@ -49,7 +49,6 @@
   	font-size: 1em;
   	display: block;
   	padding-top: 3em;
-  	text-align: center;
     overflow: hidden;
   }
   #Generate {
